[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govynai"
version = "0.1.0"
description = "Python SDK for the Govyn AI agent governance proxy"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
openai = ["openai>=2.0"]
anthropic = ["anthropic>=0.30"]
all = ["govynai[openai]", "govynai[anthropic]"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "respx>=0.22.0", "govynai[all]"]

[tool.hatch.build.targets.wheel]
packages = ["govynai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
