[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govynai"
version = "0.2.3"
description = "Python SDK for the Govyn AI governance proxy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/govynAI/govyn"
Repository = "https://github.com/govynAI/govyn"
Issues = "https://github.com/govynAI/govyn/issues"

[project.optional-dependencies]
openai = ["openai>=2.0"]
anthropic = ["anthropic>=0.30"]
all = ["govynai[openai]", "govynai[anthropic]"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "respx>=0.22.0", "govynai[all]"]

[tool.hatch.build.targets.wheel]
packages = ["govynai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
